# Scrifuco

./: Documentation.md  README.md
scrifuco/: CMakeLists.txt
scrifuco/cmake_modules/: FindSFML.cmake
scrifuco/ext/SFML-vs/doc/html/: classsf_1_1Thread.html  doxygen.css
scrifuco/ext/SFML-vs/include/SFML/Window/: Keyboard.hpp
scrifuco/ext/SFML/include/SFML/: Graphics.hpp
scrifuco/ext/SFML/include/SFML/Graphics/: BlendMode.hpp  CircleShape.hpp  Color.hpp  ConvexShape.hpp  Font.hpp  Glsl.hpp  Glsl.inl  Image.hpp  PrimitiveType.hpp  Rect.hpp  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  View.hpp
scrifuco/ext/SFML/include/SFML/System/: InputStream.hpp  MemoryInputStream.hpp  String.hpp  Thread.hpp  Utf.hpp  Utf.inl
scrifuco/ext/SFML/include/SFML/Window/: Clipboard.hpp  Context.hpp  ContextSettings.hpp  Cursor.hpp  Event.hpp  Mouse.hpp  Window.hpp  WindowStyle.hpp
scrifuco/headers/: Constants.h  DisplayElement.h  Library.h  Menu.h  Settings.h
scrifuco/headers/Editor/: DataManagement.h  DataRepresentation.h  Editor.h  EditorWindow.h  EventHandlers.h  TextCursor.h
scrifuco/src/: DisplayElements.cpp  Library.cpp  Main.cpp  Menu.cpp  Settings.cpp
scrifuco/src/Editor/: Editor.cpp  EditorWindow.cpp
scrifuco/src/Editor/Data/: DataManagement.cpp  DataRepresentation.cpp  FileManagement.cpp  TextCursor.cpp
scrifuco/src/Editor/EventHandlers/: CommandHandler.cpp  InsertHandler.cpp  TextHandler.cpp
vs_scrifuco/: vs_scrifuco.sln  vs_scrifuco.vcxproj  vs_scrifuco.vcxproj.filters
